# tensor-iroh

./: Cargo.toml  README.md  build.rs  build_pyo3_bindings.sh  build_uniffi_and_test.sh  pyproject.toml  requirements.txt  run_demo.py
monkey_patched_code/: central_server_demo.py  peer_node_demo.py
protocol/: Cargo.toml  build_and_test.sh  build_pyo3_bindings.sh  build_uniffi_and_test.sh  pyproject.toml  test_tensor_protocol.py
protocol/python/: tensor_receiver.py  tensor_sender.py  test_tensor_protocol_pyo3.py
protocol/src/: lib.rs  pyo3_mod.rs  tensor_protocol.udl
python/: demo.py  tensor_receiver.py  tensor_sender.py  test_tensor_protocol_pyo3.py  test_tensor_protocol_uniffi.py
src/: lib.rs  pyo3_mod.rs  tensor_iroh.udl
