[package]
name = "tensor-iroh"
version = "0.1.1-alpha.2"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
# Core Iroh dependencies
iroh = "0.90.0"
iroh-base = "0.90.0"
iroh-net = "0.15.0"
uniffi = { version = "0.28.3", features = ["tokio"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Compression
flate2 = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
quinn = "0.11.8"
uniffi_bindgen = "0.29.3"

# pyo3 stuff
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"], optional = true }
numpy = { version = "0.20", optional = true }
tch   = { version = "0.20", optional = true }

[build-dependencies]
uniffi = { version = "0.28", features = ["build", "tokio"] }

[features]
default = [] 
python  = ["pyo3", "numpy", "pyo3-asyncio"]   # activate for PyO3 bindings
torch   = ["python", "tch"]   # opt-in Torch support (large compile, so not in default "python")

# Development profile optimizations for faster compilation
[profile.dev]
opt-level = 0           # No optimizations
debug = true            # Include debug info
split-debuginfo = "unpacked"  # Faster debug builds on some systems
incremental = true      # Enable incremental compilation

# Fast development profile (compromise between speed and performance)
[profile.dev-fast]
inherits = "dev"
opt-level = 1           # Minimal optimizations
overflow-checks = false # Skip overflow checks

# Release profile (keep optimized)
[profile.release]
opt-level = 3           # Full optimizations
debug = false           # No debug info
lto = true             # Link-time optimization 
