[package]
name = "tensor-protocol"
version = "0.1.0"
edition = "2021"

[lib]
name = "tensor_protocol"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Iroh for networking - we use iroh-net directly for a minimal dependency.
iroh-net = { version = "0.15.0" }

# FFI bridge
uniffi = { version = "0.25.2", features = ["tokio"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# For data serialization over the stream
postcard = { version = "1.0", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }

# Utilities
anyhow = "1.0"
bytes = "1.5"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
uniffi = { version = "0.25.2", features = ["build"] } 

