[package]
name = "tensor-protocol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
# Core Iroh dependencies
iroh = { path = "../iroh/iroh" }
iroh-base = { path = "../iroh/iroh-base" }
iroh-net = "0.15.0"
uniffi = { version = "0.28.3", features = ["tokio"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
quinn = "0.11.8"
uniffi_bindgen = "0.29.3"

[build-dependencies]
uniffi = { version = "0.28", features = ["build", "tokio"] }

[features]
default = [] 

# Development profile optimizations for faster compilation
[profile.dev]
opt-level = 0           # No optimizations
debug = true            # Include debug info
split-debuginfo = "unpacked"  # Faster debug builds on some systems
incremental = true      # Enable incremental compilation

# Fast development profile (compromise between speed and performance)
[profile.dev-fast]
inherits = "dev"
opt-level = 1           # Minimal optimizations
overflow-checks = false # Skip overflow checks

# Release profile (keep optimized)
[profile.release]
opt-level = 3           # Full optimizations
debug = false           # No debug info
lto = true             # Link-time optimization 
